--- a/dom/Task64.html
+++ b/dom/Task64.html
@@ -23,7 +23,7 @@
         </ul>
 
         <div class="buttons">
-            <button class="px-2 py-1">Login</button>
+            <button class="px-2 py-1 border border-purple-600 rounded">Login</button>
             <button class="px-2 py-1 bg-violet-600 rounded">Get started</button>
         </div>
     </div>
